{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 17,
  "lineage": "1357d86b-a8e6-cb77-a563-1e2bd1437a1f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04683a716e2cf9ee4",
            "domain": "vpc",
            "id": "eipalloc-04683a716e2cf9ee4",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-37-183-167.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.183.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-an2-mytf-prod-nat"
            },
            "tags_all": {
              "Name": "eip-an2-mytf-prod-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:176247174993:internet-gateway/igw-01245ba4a6f5290e2",
            "id": "igw-01245ba4a6f5290e2",
            "owner_id": "176247174993",
            "tags": {
              "Name": "igw-an2-mytf-prod"
            },
            "tags_all": {
              "Name": "igw-an2-mytf-prod"
            },
            "vpc_id": "vpc-010101b75bf83456d"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04683a716e2cf9ee4",
            "connectivity_type": "public",
            "id": "nat-017a0e1983b61be10",
            "network_interface_id": "eni-036d1ab5e16ac9ae0",
            "private_ip": "10.0.0.205",
            "public_ip": "3.37.183.167",
            "subnet_id": "subnet-03b6a1d6d0a39346f",
            "tags": {
              "Name": "nat-an2-mytf-prod-a"
            },
            "tags_all": {
              "Name": "nat-an2-mytf-prod-a"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.subnet1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:176247174993:route-table/rtb-04d38d101b8e9b205",
            "id": "rtb-04d38d101b8e9b205",
            "owner_id": "176247174993",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01245ba4a6f5290e2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-an2-mytf-prod-pub"
            },
            "tags_all": {
              "Name": "rt-an2-mytf-prod-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-010101b75bf83456d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:176247174993:route-table/rtb-0423b22c616af7bf1",
            "id": "rtb-0423b22c616af7bf1",
            "owner_id": "176247174993",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-017a0e1983b61be10",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-an2-mytf-prod-pri"
            },
            "tags_all": {
              "Name": "rt-an2-mytf-prod-pri"
            },
            "timeouts": null,
            "vpc_id": "vpc-010101b75bf83456d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.this",
            "aws_subnet.subnet1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0392cc85196d69774",
            "route_table_id": "rtb-04d38d101b8e9b205",
            "subnet_id": "subnet-03b6a1d6d0a39346f"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.rt",
            "aws_subnet.subnet1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b48a900649086738",
            "route_table_id": "rtb-04d38d101b8e9b205",
            "subnet_id": "subnet-059a8b359af165baf"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.rt",
            "aws_subnet.subnet2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027777ac1f30ec94b",
            "route_table_id": "rtb-0423b22c616af7bf1",
            "subnet_id": "subnet-02738e7f01b0c8d98"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.this",
            "aws_route_table.rt2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet3",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003b80453081a7040",
            "route_table_id": "rtb-0423b22c616af7bf1",
            "subnet_id": "subnet-054140409515dda5a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.this",
            "aws_route_table.rt2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet4",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:176247174993:subnet/subnet-03b6a1d6d0a39346f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b6a1d6d0a39346f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176247174993",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "newTags"
            },
            "tags_all": {
              "Name": "newTags"
            },
            "vpc_id": "vpc-010101b75bf83456d"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:176247174993:subnet/subnet-059a8b359af165baf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.64.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059a8b359af165baf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176247174993",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-an2-mytf-prod-pub-c"
            },
            "tags_all": {
              "Name": "sub-an2-mytf-prod-pub-c"
            },
            "vpc_id": "vpc-010101b75bf83456d"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:176247174993:subnet/subnet-02738e7f01b0c8d98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.128.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02738e7f01b0c8d98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176247174993",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-an2-mytf-pord-pri-a"
            },
            "tags_all": {
              "Name": "sub-an2-mytf-pord-pri-a"
            },
            "vpc_id": "vpc-010101b75bf83456d"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:176247174993:subnet/subnet-054140409515dda5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.192.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054140409515dda5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176247174993",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-an2-mytf-prod-pri-c"
            },
            "tags_all": {
              "Name": "sub-an2-mytf-prod-pri-c"
            },
            "vpc_id": "vpc-010101b75bf83456d"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:176247174993:vpc/vpc-010101b75bf83456d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088dfaf134a422f39",
            "default_route_table_id": "rtb-0283671fa20b4a416",
            "default_security_group_id": "sg-092da96b1952e598f",
            "dhcp_options_id": "dopt-05b754e6904c6d006",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-010101b75bf83456d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0283671fa20b4a416",
            "owner_id": "176247174993",
            "tags": {
              "Name": "vpc-an2-mytf-prod"
            },
            "tags_all": {
              "Name": "vpc-an2-mytf-prod"
            }
          }
        }
      ]
    }
  ]
}